syntax = "proto3";
import "google/api/annotations.proto";
package product_grpc;

service ProductGrpcService
{
	rpc GetProductList (GetProductListRequest) returns (GetProductListResponse)	{
		option (google.api.http) = {
			get: "/api/v1/product/get_list"
		};
	};
	rpc GetProductListByIds (GetProductListByIdsRequest) returns (GetProductListByIdsResponse)	{
		option (google.api.http) = {
			get: "/api/v1/product/get_list"
		};
	};
	
	rpc GetProduct (GetProductRequest) returns (GetProductResponse)	{
		option (google.api.http) = {
			get: "/api/v1/product/get"
		};
	};
	rpc GetProductType (GetProductTypeRequest) returns (GetProductTypeResponse) {

	};
	rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {
		option (google.api.http) = {
			post: "/api/v1/product/create"
		};
	};
	rpc CreateSeveralProducts (CreateSeveralProductsRequest) returns (CreateSeveralProductsResponse) {
		option (google.api.http) = {
			post: "/api/v1/product/create"
		};
	};
	
	rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse)	{
		option (google.api.http) = {
			post: "/api/v1/product/update_price"
		};
	};	
	rpc Delete (DeleteRequest) returns (DeleteResponse)	{
		option (google.api.http) = {
			delete: "/api/v1/product/delete_by_id"
		};
	};;
}

message GetProductListRequest {}
message GetProductListResponse 
{
	repeated ProductGrpc_v1 products = 1;
}

message GetProductListByIdsRequest
{
	repeated int64 ids = 1;
}
message GetProductListByIdsResponse
{
	repeated ProductGrpc_v1 products = 1;
}


message GetProductRequest
{
	int64 id = 1;
}
message GetProductResponse
{
	ProductGrpc_v1 product = 1;
}

message GetProductTypeRequest
{
	
}
message GetProductTypeResponse
{
	
}

message CreateProductRequest
{
	repeated ProductGrpc_v1 product = 1;
}
message CreateProductResponse
{
	repeated int64 ids = 1;
}



message UpdateProductRequest
{
	int64 id = 1;
	float price = 2;
}

message UpdateProductResponse
{
	bool result = 1;
}

message DeleteRequest
{
	int64 id = 1;
}

message DeleteResponse
{
	bool result = 1;
}


message ProductGrpc_v1
{
	int64 id = 1;
	string name = 2;
	double price = 3;
	string currency = 4;
	ProductTypeGrpc_v1 product_type = 5;
	string creation_date = 6;
}


enum ProductTypeGrpc_v1
{
		General = 0;
    HouseholdChemicals = 1;
    Appliances = 2;
    Food = 3;
}